@@ -7,7 +7,7 @@ Martin Kraemer - various improvments
 Joshua Uziel <uzi@linuxcare.com>  - code clean up, -h and -k options, and lots more (including autoconf)
 Mike Hopkirk <hops@sco.com> - osr5 build, ocs
 Darrylo Okahata <darrylo@users.sourceforge.net> - code quality improvements
-Brent Verner <brent@linux1.org> - -R option to recurse sub directories
+Brent Verner <brent@rcfile.org> - -R option to recurse sub directories
 Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de> - autoconf, memory leaks
 Thomas Klausner - NetBSD support
 Andrew Sharpe - progress bar, tab between line selection and prompts and more
