@@ -1,3 +1,4 @@
+(2000/09/19 - brent) fixed -R to handle similarly named files
 (2000/05/31 - mascott) ncurses.h gets picked up correctly for FreeBSD
 (2000/05/18 - hops) display errors via varargs posterr(ap, ..)
                     start changing sprintfs to snprintfs
